Minor update to programming tutorial HTML app

--- a/05-programming/tutorial/todo.html
+++ b/05-programming/tutorial/todo.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="copyright" content="QA http://www.qa.com">
+    <meta name="author" content="Phillip Chan, phillip.chan@qa.com">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
+
     <title>TODO List Example</title>
 
     <style>
@@ -111,7 +114,7 @@
             float: right;
         }
 
-        /* This add hover selector to the close class. That is any elements attached to the close class with change to
+        /* This adds a hover selector to the close class. That is any elements attached to the close class with change to
            a RED with WHITE background.  In this case, this will be the close "button" for each of the todo_item
         */
         .close:hover {
